<resources>
    <string name="app_name">Prestamigos</string>

    <!-- Login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_field_short">This field is too short</string>
    <string name="error_field_repeat">This field must be the same as above</string>
    <string name="error_user_exist">This user is already registered</string>
    <string name="error_user_field">Some field is required</string>
    <string name="error_surname_field">Surname is required</string>
    <string name="error_concept">This field must be a number</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="registrarse">Dont have account? Register</string>
    <string name="password_olvidado">I forgot my password</string>
    <string name="cerrar_sesion">Close session</string>
    <string name="sesion">User</string>

    <!-- Recuperar contraseña -->
    <string name="titulo_recuperar">Recover password</string>
    <string name="campo_codigo">Security code</string>
    <string name="campo_nuevo_password">New password</string>
    <string name="accion_obtener_codigo">Get code</string>

    <!-- Registro -->
    <string name="titulo_registro">Register</string>
    <string name="campo_nombre">Name</string>
    <string name="campo_apellidos">Surname</string>
    <string name="campo_email">Email</string>
    <string name="campo_password">Password</string>
    <string name="campo_email_repetir">Repeat email</string>
    <string name="campo_password_repetir">Repeat password</string>
    <string name="accion_aceptar">Accept</string>

    <!-- Menu lateral-->
    <string name="title_activity_principal">DeudasPendientesActivity</string>

    <string name="titulo_deudas_pendiente">Debts of others</string>
    <string name="titulo_mis_deudas">My debts</string>
    <string name="titulo_historial">Record</string>
    <string name="titulo_resumen">Dashboard</string>
    <string name="titulo_amigos">Friends</string>
    <string name="titulo_perfil">Profile</string>

    <string name="titulo_nueva_deuda">New debt</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Tarjeta deuda-->
    <string name="tarjeta_nombre">Javier Maestre</string>
    <string name="tarjeta_fecha">31/01/2017</string>
    <string name="tarjeta_concepto">Sushi</string>
    <string name="tarjeta_valor">15€</string>
    <string name="tarjeta_deuda_accion1">Pay off</string>
    <string name="tarjeta_deuda_accion2">Increase</string>
    <string name="otros_deuda_total">Total:</string>
    <string name="otros_deuda_cantidad">20€</string>
    <string name="accion_nueva_deuda">New debt</string>
    <string name="accion_buscar">Search</string>
    <string name="sugerencia_busqueda_deuda">Name of the person</string>
    <string name="detalles_deuda_titulo">Historic</string>

    <!-- Dialogo deuda -->
    <string name="dialogo_cantidad">Quantity</string>
    <string name="dialogo_deuda_titulo1">Pay debt</string>
    <string name="dialogo_deuda_titulo2">Increase debt</string>

    <!-- Nueva deuda -->
    <string name="campo_nombre_amigo">Name of the person</string>
    <string name="campo_concepto">Concept</string>
    <string name="campo_cantidad">Quantity</string>
    <string name="accion_anyadir">Add</string>

    <!-- Detalles amigo-->
    <string name="add_friend">Add new friend</string>
    <string name="delete_friend">Delete friend</string>
    <string name="titulo_detalles_amigo">Friend</string>

    <!-- Dashboard -->
    <string name="dashboard_deudas_totales">Total debts</string>
    <string name="dashboard_medeben">They owe me</string>
    <string name="dashboard_debo">I owe</string>
    <string name="dashboard_medebian">Owed to me</string>
    <string name="dashboard_debia">I owed</string>
    <string name="dashboard_numero_medeben">Debts owed me</string>
    <string name="dashboard_numero_debo">Debts that I owe</string>

    <!-- Operacion -->
    <string name="op_tipo">Paid</string>
    <string name="op_fecha">01/02/2017</string>
    <string name="op_valor">5€</string>
    <string name="op_tipo_pagar">Paid</string>
    <string name="op_tipo_aumentar">Increased</string>

    <!-- Detalles deuda -->
    <string name="detalles_deuda_total">Total</string>
    <string name="detalles_deuda_pagado">Paid</string>

    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ok">Accept</string>
    <string name="cancelar">Cancel</string>


    <!-- Mensajes-->
    <string name="msg_error_login">Email or password incorrect</string>
    <string name="msg_error_conexion">Connection error</string>
    <string name="msg_perfil_actualizado">Profile updated</string>
    <string name="msg_error_codigo">Invalid code</string>
</resources>
