<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content" xmlns:card_view="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view_deuda"
        android:layout_gravity="center"
        card_view:cardCornerRadius="4dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/paddin_cantidad_vertical"
        android:layout_marginBottom="@dimen/paddin_cantidad_vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                card_view:srcCompat="@drawable/default_profile_small"
                android:id="@+id/imagePeque"
                android:layout_marginTop="50dp"
                android:contentDescription="@string/titulo_amigos"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="220dp"
                android:layout_marginLeft="220dp"
                android:visibility="gone" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/deuda_nombre"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/tarjeta_nombre"
                    android:textSize="@dimen/tam_nombre"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:paddingLeft="@dimen/paddin_borde_tarjeta"
                    android:paddingRight="@dimen/paddin_borde_tarjeta" />

                <TextView
                    android:text="@string/tarjeta_fecha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/deuda_fecha"
                    android:paddingTop="@dimen/paddin_fecha"
                    android:paddingBottom="@dimen/paddin_fecha"
                    android:paddingLeft="@dimen/paddin_borde_tarjeta"
                    android:paddingRight="@dimen/paddin_borde_tarjeta" />

                <TextView
                    android:text="@string/tarjeta_concepto"
                    android:layout_height="wrap_content"
                    android:id="@+id/deuda_concepto"
                    android:paddingTop="@dimen/paddin_fecha"
                    android:paddingBottom="@dimen/paddin_fecha"
                    android:paddingLeft="@dimen/paddin_borde_tarjeta"
                    android:paddingRight="@dimen/paddin_borde_tarjeta"
                    android:layout_width="170dp" />

                <TextView
                    android:text="@string/tarjeta_valor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/deuda_cantidad"
                    android:paddingTop="@dimen/paddin_cantidad_vertical"
                    android:paddingBottom="@dimen/paddin_cantidad_vertical"
                    android:paddingRight="@dimen/paddin_borde_tarjeta"
                    android:paddingLeft="@dimen/paddin_borde_tarjeta"
                    android:textSize="@dimen/tam_cantidad" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <Button
                        android:text="@string/tarjeta_deuda_accion1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/deuda_accion1"
                        android:layout_marginTop="@dimen/paddin_fecha"
                        android:layout_marginBottom="@dimen/paddin_fecha"
                        style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog" />

                    <Button
                        android:text="@string/tarjeta_deuda_accion2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/deuda_accion2"
                        android:layout_marginTop="@dimen/paddin_fecha"
                        android:layout_marginBottom="@dimen/paddin_fecha"
                        style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog" />
                </LinearLayout>

            </LinearLayout>
        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>