<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_recuperar_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="es.jma.prestamigos.RecuperarPasswordActivity">

    <ProgressBar
        android:id="@+id/recuperar_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/formulario_recuperar"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/campo_email"
                android:id="@+id/recuperar_email"
                android:drawablePadding="@dimen/padding_icon_field"
                android:drawableStart="@drawable/ic_email"
                android:inputType="textEmailAddress"
                android:drawableLeft="@drawable/ic_email" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/campo_codigo"
                android:id="@+id/recuperar_codigo"
                android:drawablePadding="@dimen/padding_icon_field"
                android:drawableStart="@drawable/ic_file_document_box"
                android:inputType="numberPassword"
                android:drawableLeft="@drawable/ic_file_document_box" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/campo_nuevo_password"
                android:id="@+id/recuperar_password"
                android:drawablePadding="@dimen/padding_icon_field"
                android:drawableStart="@drawable/ic_lock"
                android:inputType="textPassword"
                android:drawableLeft="@drawable/ic_lock" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/campo_password_repetir"
                android:id="@+id/recuperar_password_repetir"
                android:drawablePadding="@dimen/padding_icon_field"
                android:drawableStart="@drawable/ic_lock_plus"
                android:inputType="textPassword"
                android:drawableLeft="@drawable/ic_lock_plus" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/code_button"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/accion_obtener_codigo"
            android:textStyle="bold" />

        <Button
            android:id="@+id/recover_button"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/accion_aceptar"
            android:textStyle="bold"
            android:enabled="false" />
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
