<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_nueva_deuda"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="es.jma.prestamigos.NuevaDeudaActivity"
    android:orientation="vertical">

    <android.support.v7.widget.SearchView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/searchNuevaDeuda"
        app:queryHint="@string/campo_nombre_amigo"
        app:searchIcon="@drawable/ic_account" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/campo_concepto"
            android:id="@+id/nueva_deuda_concepto"
            android:drawablePadding="@dimen/padding_icon_field"
            android:inputType="text"
            android:drawableStart="@drawable/ic_file_document_box" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/campo_cantidad"
            android:id="@+id/nueva_deuda_cantidad"
            android:drawablePadding="@dimen/padding_icon_field"
            android:inputType="numberDecimal"
            android:drawableStart="@drawable/ic_cash_100" />
    </android.support.design.widget.TextInputLayout>

</LinearLayout>
