<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="es.jma.prestamigos.RegistroActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/formulario_registro">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/formulario_registro_layout"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:id="@+id/imagen_layout"
                    android:background="@drawable/fondo_registro"
                    android:layout_height="95dp"
                    android:layout_marginBottom="20dp">

                    <ImageView
                        app:srcCompat="@drawable/default_profile"
                        android:id="@+id/imageView3"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_width="70dp"
                        android:layout_height="70dp" />

                    <android.support.design.widget.FloatingActionButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        app:fabSize="mini"
                        app:srcCompat="@drawable/ic_camera"
                        android:id="@+id/floatingActionButton"
                        android:layout_marginTop="55dp"
                        android:layout_marginLeft="55dp"
                        app:backgroundTint="@android:color/holo_red_light"
                        app:pressedTranslationZ="@dimen/padding_icon_field" />


                </RelativeLayout>
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/campo_nombre"
                    android:id="@+id/registro_nombre"
                    android:drawablePadding="@dimen/padding_icon_field"
                    android:drawableLeft="@drawable/ic_account_star"
                    android:inputType="textPersonName" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/campo_apellidos"
                    android:id="@+id/registro_apellidos"
                    android:drawablePadding="@dimen/padding_icon_field"
                    android:drawableLeft="@drawable/ic_account_star_variant"
                    android:inputType="textPersonName" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/campo_email"
                    android:id="@+id/registro_email"
                    android:drawablePadding="@dimen/padding_icon_field"
                    android:drawableLeft="@drawable/ic_email"
                    android:inputType="textEmailAddress" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/campo_email_repetir"
                    android:id="@+id/registro_email_repetir"
                    android:drawablePadding="@dimen/padding_icon_field"
                    android:drawableLeft="@drawable/ic_email_alert"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/campo_password"
                    android:id="@+id/registro_password"
                    android:drawablePadding="@dimen/padding_icon_field"
                    android:drawableLeft="@drawable/ic_lock"
                    android:inputType="textPassword" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/campo_password_repetir"
                    android:drawablePadding="@dimen/padding_icon_field"
                    android:drawableLeft="@drawable/ic_lock_plus"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
