<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_detalles_deuda"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="es.jma.prestamigos.DetallesDeudaActivity"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view_deuda"
                android:layout_gravity="center"
                card_view:cardCornerRadius="4dp"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/paddin_cantidad_vertical"
                android:layout_marginBottom="@dimen/paddin_cantidad_vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/deuda_detalle_nombre"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/tarjeta_nombre"
                            android:textSize="@dimen/tam_nombre"
                            android:textStyle="bold"
                            android:textColor="@android:color/black"
                            android:paddingTop="@dimen/activity_vertical_margin"
                            android:paddingLeft="@dimen/paddin_borde_tarjeta"
                            android:paddingRight="@dimen/paddin_borde_tarjeta" />

                        <TextView
                            android:text="@string/tarjeta_fecha"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/deuda_detalle_fecha"
                            android:paddingTop="@dimen/paddin_fecha"
                            android:paddingBottom="@dimen/paddin_fecha"
                            android:paddingLeft="@dimen/paddin_borde_tarjeta"
                            android:paddingRight="@dimen/paddin_borde_tarjeta" />

                        <TextView
                            android:text="@string/tarjeta_concepto"
                            android:layout_height="0dp"
                            android:id="@+id/deuda_detalle_concepto"
                            android:paddingTop="@dimen/paddin_fecha"
                            android:paddingBottom="@dimen/paddin_fecha"
                            android:paddingLeft="@dimen/paddin_borde_tarjeta"
                            android:paddingRight="@dimen/paddin_borde_tarjeta"
                            android:layout_width="match_parent"
                            android:layout_weight="0.5"
                            android:textSize="@dimen/tam_concepto" />

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/paddin_borde_tarjeta"
                            android:layout_marginRight="@dimen/paddin_borde_tarjeta">

                            <TextView
                                android:text="@string/detalles_deuda_total"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/textView2"
                                android:layout_weight="0.5" />

                            <TextView
                                android:text="@string/tarjeta_valor"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/deuda_detalle_cantidad"
                                android:paddingRight="@dimen/paddin_borde_tarjeta"
                                android:paddingLeft="@dimen/paddin_borde_tarjeta"
                                android:textSize="@dimen/tam_concepto"
                                android:layout_weight="0.5"
                                android:textStyle="bold" />
                        </LinearLayout>

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/paddin_borde_tarjeta"
                            android:layout_marginRight="@dimen/paddin_borde_tarjeta"
                            android:paddingBottom="@dimen/paddin_cantidad_vertical">

                            <TextView
                                android:text="@string/detalles_deuda_pagado"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/deuda_detalles_restante"
                                android:layout_weight="0.5" />

                            <TextView
                                android:text="@string/tarjeta_valor"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/deuda_detalle_restante"
                                android:paddingRight="@dimen/paddin_borde_tarjeta"
                                android:paddingLeft="@dimen/paddin_borde_tarjeta"
                                android:textSize="@dimen/tam_concepto"
                                android:layout_weight="0.5"
                                android:textStyle="bold" />

                        </LinearLayout>

                    </LinearLayout>
                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/paddin_cantidad_vertical"
                android:id="@+id/rv_operaciones" />
        </LinearLayout>



    </ScrollView>
</LinearLayout>
